--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ margin-top: 40px;
   max-width: 400px;
   height: auto;
   margin: auto;
-  border: 1px solid #fff;
+ /* border: 1px solid #fff; */
   border-radius: 12px;
 }
 
